@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE TS>
-<TS version="2.1" language="el">
+<?xml version="1.0" ?><!DOCTYPE TS><TS language="el" version="2.1">
 <context>
     <name>AppearancePage</name>
     <message>
@@ -356,7 +354,7 @@
     <message>
         <location filename="../interfacepage.ui" line="246"/>
         <source>Show shortcut underlines</source>
-        <translation type="unfinished"></translation>
+        <translation>Εμφάνιση των υπογραμμίσεων των συντομεύσεων</translation>
     </message>
     <message>
         <location filename="../interfacepage.cpp" line="47"/>
