@@ -234,3 +234,4 @@ Version 0.34
 * updated German translation (Ettore Atalan)
 * updated Italian translation (Luigi Baldoni)
 * updated Bulgarian translation (Kiril Kirilov)
+* updated Greek translation (Dimitrios Glentadakis)
